@startuml

class Application{
}
class TodoListApplication{
        -start()
}

Application <|-- TodoListApplication
Wrapper o-- TodoListController
Item o-- Wrapper
Item o-- TodoListController
class Wrapper{
       -observableList Item
       +wrapper()
}
class Item{
       -String Description
       -String Date
       -CheckBox status

       +getDescription()
       +setDescription()
       +getDate()
       +setDate()
       +getStatus()
       +setStatus()
       +descriptionProperty()
       +dateProperty()
}
class TodoListController{

       -DatePicker dateBox
       -DateButton addItemButton
       -TableColumn checkColumn
       -Button clearListButton
       -MenuItem

       +initialize()
       viewComplete()
       viewIncomplete()
       viewAll()
       EditListItem()
       AddListItem()
       AddDate()
       ClearList()
       OpenListFile()
       UserGuide()
       RemoveItemFromList()
       SaveFile()

}



@enduml